--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
   --slightly-transparent-white: hsla(0, 0%, 100%, 0.75);
   --slightly-transparent-white-head: hsla(0, 0%, 100%, 0.6);
 
+  font-size: 16px;
 }
 
 /* CSS reset */
